--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
     "react-helmet": "^6.1.0",
+    "react-modal-video": "^1.2.3",
     "react-rating": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
