--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@u-wave/react-youtube": "^0.7.1",
     "axios": "^0.18.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -23,6 +24,7 @@
     "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
     "react-helmet": "^6.1.0",
@@ -31,6 +33,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "^0.26.1",
+    "reactjs-popup": "^1.5.0",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.0"
   },
