추가버튼 최대한 노력했는데 안돼네 ㅠㅠ

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.0",
+    "create-react-class": "^15.6.3",
     "http-proxy-middleware": "^1.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -44,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
