--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,16 @@
     "http-proxy-middleware": "^1.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.11.2",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.26.1",
+    "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
