--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-proxy-middleware": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
