--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-modal": "^3.11.2",
     "react-modern-calendar-datepicker": "^3.1.6",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
