--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.2",
+    "react-google-login": "^5.1.21",
     "react-helmet": "^6.1.0",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-paypal-express-checkout": "^1.0.5",
