--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^5.2.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "google-auth-library": "^6.0.5",
     "http-proxy-middleware": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
