--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^1.0.4",
+    "@ant-design/icons": "^4.2.1",
+    "@fullcalendar/core": "^5.1.0",
+    "@fullcalendar/daygrid": "^5.1.0",
+    "@fullcalendar/interaction": "^5.1.0",
+    "@fullcalendar/react": "^5.1.0",
+    "@fullcalendar/timegrid": "^5.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -11,11 +18,13 @@
     "antd": "^4.4.2",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "create-react-class": "^15.6.3",
     "http-proxy-middleware": "^1.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.11.2",
