--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-slick": "^0.26.1",
     "reactjs-popup": "^1.5.0",
     "styled-components": "^5.1.1",
-    "styled-reset": "^4.2.0"
+    "styled-reset": "^4.2.0",
+    "twilio": "^3.48.1"
   },
   "scripts": {
     "start": "react-scripts start",
