--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@u-wave/react-youtube": "^0.7.1",
+    "ant-design-pro": "^2.3.2",
     "axios": "^0.18.1",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "concurrently": "^5.2.0",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
