--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,9 @@
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
-    "styled-reset": "^4.2.1"
+    "styled-reset": "^4.2.1",
+    "webpack": "^4.19.1",
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
