--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "reactjs-popup": "^1.5.0",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.0",
-    "twilio": "^3.48.1"
+    "twilio": "^3.48.1",
+    "webpack": "^4.19.1",
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
