--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.1",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
+    "concurrently": "^5.2.0",
     "create-react-class": "^15.6.3",
     "http-proxy-middleware": "^1.0.5",
     "prop-types": "^15.7.2",
@@ -30,6 +31,7 @@
     "react-dropzone": "^11.0.2",
     "react-google-login": "^5.1.21",
     "react-helmet": "^6.1.0",
+    "react-image-gallery": "^1.0.8",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.2.0",
