--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "@ant-design/compatible": "^1.0.4",
     "@ant-design/icons": "^4.2.1",
     "@date-io/date-fns": "^2.8.0",
-    "@date-io/moment": "^2.8.0",
+    "@date-io/moment": "^1.3.13",
     "@fullcalendar/core": "^5.1.0",
     "@fullcalendar/daygrid": "^5.1.0",
     "@fullcalendar/interaction": "^5.1.0",
@@ -26,6 +26,7 @@
     "concurrently": "^5.2.0",
     "create-react-class": "^15.6.3",
     "http-proxy-middleware": "^1.0.5",
+    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
