--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-google-login": "^5.1.21",
     "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.0.8",
+    "react-kakao-login": "^1.2.2",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.2.1",
