--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-slick": "^0.26.1",
+    "react-window-opener": "0.0.7",
     "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
