--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-kakao-login": "^1.2.2",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-paypal-express-checkout": "^1.0.5",
+    "react-popout": "^1.0.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
