--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
     "react-popout": "^1.0.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.2",
     "react-select": "^3.1.0",
     "react-slick": "^0.26.1",
     "react-window-opener": "0.0.7",
