--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
