--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,10 @@
     "@ant-design/icons": "^4.2.1",
     "@date-io/date-fns": "^2.8.0",
     "@date-io/moment": "^1.3.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fullcalendar/core": "^5.1.0",
     "@fullcalendar/daygrid": "^5.1.0",
     "@fullcalendar/interaction": "^5.1.0",
@@ -47,6 +51,7 @@
     "react-select": "^3.1.0",
     "react-slick": "^0.26.1",
     "react-window-opener": "0.0.7",
+    "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
