--- a/server/package.json
+++ b/server/package.json
@@ -50,17 +50,13 @@
     "reactjs-popup": "^1.5.0",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.0",
-    "twilio": "^3.48.1",
     "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "backend": "nodemon server/index.js",
-    "build": "react-scripts build",
+    "start": "node index.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
+    "dev": "nodemon index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
