--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t pjw6531/react-test-app -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true pjw6531/react-test-app npm test
+  - docker run -e CI=true pjw6531/react-test-app npm run test
 
 after_success:
   - docker build -t pjw6531/docker-frontend ./client
