--- a/server/package.json
+++ b/server/package.json
@@ -54,9 +54,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "react-scripts test",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
