--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
 before_install:
   - docker build -t pjw6531/react-test-app -f ./client/Dockerfile.dev ./client
 
-script:
-  - docker run -e CI=true pjw6531/react-test-app npm run test
 # script:
-#   - echo "skipping tests"
+#   - docker run -e CI=true pjw6531/react-test-app npm run test
+script:
+  - echo "skipping tests"
 
 after_success:
   - docker build -t pjw6531/docker-frontend ./client
