--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: "ap-northeast-2"
-  app: "docker-nomfilx"
-  env: "DockerNomfilx-env"
+  app: "docker-movie"
+  env: "DockerMovie-env"
   bucket_name: elasticbeanstalk-ap-northeast-2-128529754877
-  bucket_path: "docker-nomfilx"
+  bucket_path: "docker-movie"
   on:
     branch: master
 
