--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
