--- a/server/config/awsconfig.json
+++ b/server/config/awsconfig.json
@@ -1,5 +1,5 @@
 {
-  "accessKeyId": "AKIAIKA3I3SEH2L6LUFQ",
-  "secretAccessKey": "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",
+  "accessKeyId": "AKIAJIBNQVCY55UTBJHQ",
+  "secretAccessKey": "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",
   "region": "ap-northeast-2"
 }
