--- a/server/config/awsconfig.json
+++ b/server/config/awsconfig.json
@@ -1,5 +1,5 @@
 {
-  "accessKeyId": "AKIAIKA3I3SEH2L6LUFQ",
-  "secretAccessKey": "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",
+  "accessKeyId": "AKIAIRI253KLMPQ5YWHA",
+  "secretAccessKey": "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",
   "region": "ap-northeast-2"
 }
